--- a/CONFIG
+++ b/CONFIG
@@ -1,11 +1,12 @@
 #CONFIGURATION
-#Wed Apr 09 10:18:20 VET 2014
+#Thu Apr 10 17:47:24 VET 2014
 OS=Windows 7
 MAX_ITERATIONS=10000
 LIB_PATH=lib/
 TRANSLATE_PATH=translate/
 TRANSLATE=es_VE
 MAX_STATE=1000
+INIT_MAXIMIZED=FALSE
 APP_LICENSE=GNU General Public License
 DEFAULT_DELAY=40
 APP_AUTHOR=SAUL PIÑA
@@ -15,10 +16,10 @@ LIB_PATH_WINDOWS_64=lib/amd64/windows/
 LIB_PATH_WINDOWS_32=lib/i386/windows/
 LIB_PATH_LINUX_64=lib/amd64/linux/
 DEFAULT_ITERATIONS=1000
-LIB_PATH_LINUX_32=lib/i386/linux/
-MAX_DELAY=1000
 OS_ARCH=x86
-APP_NAME=Wasps' Nest Building
-MAX_AGENTS=100
+MAX_DELAY=1000
+LIB_PATH_LINUX_32=lib/i386/linux/
 DEFAULT_CELLSPERAXIS=10
+MAX_AGENTS=100
+APP_NAME=Wasps' Nest Building
 DEFAULT_AGENTS=10
