--- a/CONFIG
+++ b/CONFIG
@@ -1,5 +1,6 @@
 #CONFIGURATION
-#Thu Apr 10 17:47:24 VET 2014
+#Wed Apr 16 20:07:28 VET 2014
+SKIN=TRUE
 OS=Windows 7
 MAX_ITERATIONS=10000
 LIB_PATH=lib/
@@ -16,10 +17,10 @@ LIB_PATH_WINDOWS_64=lib/amd64/windows/
 LIB_PATH_WINDOWS_32=lib/i386/windows/
 LIB_PATH_LINUX_64=lib/amd64/linux/
 DEFAULT_ITERATIONS=1000
-OS_ARCH=x86
-MAX_DELAY=1000
 LIB_PATH_LINUX_32=lib/i386/linux/
-DEFAULT_CELLSPERAXIS=10
-MAX_AGENTS=100
+MAX_DELAY=1000
+OS_ARCH=x86
 APP_NAME=Wasps' Nest Building
+MAX_AGENTS=100
+DEFAULT_CELLSPERAXIS=10
 DEFAULT_AGENTS=10
