Visualizaci?n de animaci?n

--- a/CONFIG
+++ b/CONFIG
@@ -1,6 +1,7 @@
 #CONFIGURATION
-#Sat Apr 19 11:21:48 VET 2014
+#Tue Apr 22 01:55:04 VET 2014
 SKIN=TRUE
+TRANSPARENCY=0.9f
 OS=Windows 7
 MAX_ITERATIONS=10000
 LIB_PATH=lib/
