Programado el boton limpiar

--- a/CONFIG
+++ b/CONFIG
@@ -1,7 +1,7 @@
 #CONFIGURATION
-#Tue Apr 22 23:38:18 VET 2014
+#Wed Apr 23 07:49:11 VET 2014
 SKIN=TRUE
-TRANSPARENCY=0.9f
+TRANSPARENCY=.9f
 OS=Windows 7
 MAX_ITERATIONS=10000
 LIB_PATH=lib/
@@ -16,12 +16,12 @@ DEFAULT_STATE=1
 MAX_CELLSPERAXIS=100
 LIB_PATH_WINDOWS_64=lib/amd64/windows/
 LIB_PATH_WINDOWS_32=lib/i386/windows/
-DEFAULT_ITERATIONS=1000
 LIB_PATH_LINUX_64=lib/amd64/linux/
-OS_ARCH=x86
-MAX_DELAY=1000
+DEFAULT_ITERATIONS=1000
 LIB_PATH_LINUX_32=lib/i386/linux/
-DEFAULT_CELLSPERAXIS=10
-MAX_AGENTS=100
+MAX_DELAY=1000
+OS_ARCH=x86
 APP_NAME=Wasps' Nest Building
+MAX_AGENTS=100
+DEFAULT_CELLSPERAXIS=10
 DEFAULT_AGENTS=10
