--- a/CONFIG
+++ b/CONFIG
@@ -1,27 +1,27 @@
 #CONFIGURATION
-#Wed Apr 23 18:20:57 VET 2014
+#Wed Mar 16 17:59:09 ECT 2016
 SKIN=TRUE
 TRANSPARENCY=.9f
-OS=Windows 7
+OS=Linux
 MAX_ITERATIONS=10000
 LIB_PATH=lib/
 TRANSLATE_PATH=translate/
 TRANSLATE=es_VE
 MAX_STATE=1000
 INIT_MAXIMIZED=FALSE
-APP_LICENSE=GNU General Public License
+APP_LICENSE=MIT
 DEFAULT_DELAY=40
 APP_AUTHOR=SAUL PIÑA
 DEFAULT_STATE=1
 MAX_CELLSPERAXIS=100
 LIB_PATH_WINDOWS_64=lib/amd64/windows/
 LIB_PATH_WINDOWS_32=lib/i386/windows/
-LIB_PATH_LINUX_64=lib/amd64/linux/
 DEFAULT_ITERATIONS=1000
-LIB_PATH_LINUX_32=lib/i386/linux/
+LIB_PATH_LINUX_64=lib/amd64/linux/
+OS_ARCH=amd64
 MAX_DELAY=1000
-OS_ARCH=x86
-APP_NAME=Wasps' Nest Building
-MAX_AGENTS=100
+LIB_PATH_LINUX_32=lib/i386/linux/
 DEFAULT_CELLSPERAXIS=10
+MAX_AGENTS=100
+APP_NAME=Wasps' Nest Building
 DEFAULT_AGENTS=10
