--- a/CONFIG
+++ b/CONFIG
@@ -1,14 +1,14 @@
 #CONFIGURATION
-#Wed Mar 16 17:59:09 ECT 2016
+#Wed Mar 30 21:26:01 ECT 2016
 SKIN=TRUE
-TRANSPARENCY=.9f
+TRANSPARENCY=.9999f
 OS=Linux
 MAX_ITERATIONS=10000
 LIB_PATH=lib/
 TRANSLATE_PATH=translate/
 TRANSLATE=es_VE
 MAX_STATE=1000
-INIT_MAXIMIZED=FALSE
+INIT_MAXIMIZED=TRUE
 APP_LICENSE=MIT
 DEFAULT_DELAY=40
 APP_AUTHOR=SAUL PIÑA
